<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="179dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/enter_college_id"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/rollnumber"
        app:layout_constraintEnd_toStartOf="@+id/rollnumber"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/rollnumber"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/y15itxxx"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/results"
        app:layout_constraintEnd_toEndOf="@+id/rollnumber"
        app:layout_constraintStart_toStartOf="@+id/rollnumber"
        app:layout_constraintTop_toBottomOf="@+id/rollnumber" />

    <CheckBox
        android:id="@+id/calculateCGPA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate_cgpa"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_results"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView" />

    <TextView
        android:id="@+id/textview_sgpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textColor="@color/colorAccent"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_results" />

    <WebView
        android:id="@+id/webView_results"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_sgpa">

    </WebView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/ic_add_black_24dp"
        app:elevation="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/webView_results"
        app:layout_constraintEnd_toEndOf="@+id/webView_results"
        tools:srcCompat="@tools:sample/avatars" />

</android.support.constraint.ConstraintLayout>